[project]
name = "jinritoutiao"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "aiosqlite>=0.22.1",
    "bs4>=0.0.2",
    "lxml>=6.0.2",
    "markdownify>=1.2.2",
    "openai>=2.16.0",
    "pandantic>=1.0.1",
    "playwright>=1.57.0",
    "pyyaml>=6.0.3",
    "videofetch>=0.6.1",
]
